Logging (#2):      - Documentation      - Bazel Build additions

--- a/compiler/BUILD.bazel
+++ b/compiler/BUILD.bazel
@@ -5,4 +5,17 @@ package(
     licenses = ["notice"],
 )
 
+cc_library(
+    name = "core",
+    hdrs = ["core.hpp"],
+)
+
+# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_binary
+cc_binary(
+    name = "main",
+    srcs = ["main.cc"],
+    copts = [],
+    deps = ["core"],
+)
+
 exports_files(["LICENSE"])
