--- a/.bazelrc
+++ b/.bazelrc
@@ -11,17 +11,70 @@ register_toolchains(
 ###############################################################################
 # Flags                                                              [ Config ]
 
-build --cxxopt="-std=c++20"
+build --cxxopt=-std=c++20
 
-build:debug --compilation_mode="dbg"
-build:debug --cxxopt="-Wall"
-build:debug --cxxopt="-Wextra"
-build:debug --cxxopt="-Wpedantic"
+build:debug --compilation_mode=dbg
+build:debug --cxxopt=-Wall
+build:debug --cxxopt=-Wextra
+build:debug --cxxopt=-Wpedantic
+build:debug --cxxopt=-DLOG_LEVEL=6
+build:debug --cxxopt=-DLOG_ASSERTIONS
 
-build:release --compilation_mode="opt"
-build:release --cxxopt="-Wall"
-build:release --cxxopt="-Wextra"
-build:release --cxxopt="-Wpedantic"
+
+build:release --compilation_mode=opt
+build:release --cxxopt=-Wall
+build:release --cxxopt=-Wextra
+build:release --cxxopt=-Wpedantic
+build:release --cxxopt=-DLOG_LEVEL=1
+
+###############################################################################
+# Options for building with address sanitizer.
+# https://github.com/google/sanitizers/wiki/AddressSanitizer
+###############################################################################
+
+# ASAN (address sanitizer)
+# https://clang.llvm.org/docs/AddressSanitizer.html
+build:asan --config=sanitizer
+build:asan --features=asan
+build:asan --copt=-fsanitize=address
+build:asan --copt=-fsanitize-address-use-after-scope
+build:asan --linkopt=-fsanitize=address
+build:asan --cc_output_directory_tag=asan
+build:asan --copt=-DADDRESS_SANITIZER
+
+# MSAN (memory sanitizer)
+# https://clang.llvm.org/docs/MemorySanitizer.html
+build:msan --config=sanitizer
+build:msan --features=msan
+build:msan --copt=-fsanitize=memory
+build:msan --copt=-fsanitize-memory-track-origins
+build:msan --linkopt=-fsanitize=memory
+build:msan --cc_output_directory_tag=msan
+build:msan --copt=-DMEMORY_SANITIZER
+
+# TSAN (thread sanitizer)
+# https://clang.llvm.org/docs/ThreadSanitizer.html
+build:tsan --config=sanitizer
+build:tsan --features=tsan
+build:tsan --copt=-fsanitize=thread
+build:tsan --linkopt=-fsanitize=thread
+build:tsan --cc_output_directory_tag=tsan
+build:tsan --copt=-DTHREAD_SANITIZER
+
+# UBSAN (undefined behavior sanitizer)
+# https://clang.llvm.org/docs/UndefinedBehaviorSanitizer.html
+build:ubsan --config=sanitizer
+build:ubsan --features=ubsan
+build:ubsan --copt=-fsanitize=undefined
+build:ubsan --linkopt=-fsanitize=undefined
+build:ubsan --linkopt=-lubsan
+build:ubsan --cc_output_directory_tag=ubsan
+
+# Don't strip debug info
+build:sanitizer --strip=never
+build:sanitizer --force_ignore_dash_static
+build:sanitizer --test_timeout=120,600,1800,-1
+build:sanitizer --copt=-fno-omit-frame-pointer
 
 ###############################################################################
 # .bazelrc workspace & user overrides                                 [ Bazel ]
