--- a/.bazelrc
+++ b/.bazelrc
@@ -12,6 +12,7 @@ register_toolchains(
 # Flags                                                              [ Config ]
 
 build --cxxopt=-std=c++20
+build --repo_env=CC=clang++
 
 build:debug --compilation_mode=dbg
 build:debug --cxxopt=-Wall
