P::Parser structure (#3):     - Requires Elements, AST, Manager     - Status: Unfinished

--- a/compiler/BUILD.bazel
+++ b/compiler/BUILD.bazel
@@ -18,6 +18,7 @@ cc_binary(
     linkopts = ["-pthread"],
     deps = [
         "@pcomputation//compiler/logging:log",
+        "@pcomputation//compiler/dialect/parser",
     ],
 )
 
