Structural Parser Changes (#3):     - Data based pipeline     - First parse element-wise by file (later multithreaded reading)

--- a/compiler/dialect/grammar/BUILD.bazel
+++ b/compiler/dialect/grammar/BUILD.bazel
@@ -13,3 +13,8 @@ cc_library(
         "@pcomputation//compiler/utilities/structure:bitmask",
     ],
 )
+
+cc_library(
+    name = "literals",
+    hdrs = ["literals.inl"],
+)
