--- a/compiler/dialect/parser/BUILD.bazel
+++ b/compiler/dialect/parser/BUILD.bazel
@@ -10,8 +10,12 @@ cc_library(
     name = "parser",
     srcs = ["parser.cpp"],
     hdrs = ["parser.hpp"],
+    data = [
+        "@pcomputation//compiler/test/assets/basic",
+    ],
     deps = [
         "@pcomputation//compiler/dialect/grammar:elements",
+        "@pcomputation//compiler/dialect/grammar:literals",
         "@pcomputation//compiler/logging:log",
         "@pcomputation//compiler/utilities/interface:error",
     ],
